--- a/giftup.html
+++ b/giftup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-  
+  <title>Custom Amount</title>
 </head>
 <body>
 <div class="gift-up-target" data-site-id="731c91e0-0cb5-4bc8-7af5-08de5ff07960" data-platform="Other data-purchaser-name="Lee" data-recipient-name="Alex" data-purchaser-email="lee@giftupapp.com" data-recipient-email="alex@giftupapp.com" data-who-for="onlyme""></div>
