Fix HTML syntax for gift-up-target div

--- a/giftup.html
+++ b/giftup.html
@@ -5,7 +5,7 @@
     <title>Custom Amount</title>
 </head>
 <body>
-<div class="gift-up-target" data-site-id="731c91e0-0cb5-4bc8-7af5-08de5ff07960" data-platform="Other data-purchaser-name="Lee" data-recipient-name="Alex" data-purchaser-email="lee@giftupapp.com" data-recipient-email="alex@giftupapp.com" data-who-for="onlyme""></div>
+<div class="gift-up-target" data-site-id="731c91e0-0cb5-4bc8-7af5-08de5ff07960" data-platform="Other" data-product-id="79834501-fded-49ce-2c7b-08de6281abc8"></div>
 <script type="text/javascript">
 (function (g, i, f, t, u, p, s) {
     g[u] = g[u] || function() { (g[u].q = g[u].q || []).push(arguments) };
